gradle fix for #22432